@@ -1,11 +1,11 @@
 package com.ict.finalProject.review.service.impl;
 
 import com.ict.finalProject.domain.constant.ImageWriteType;
+import com.ict.finalProject.domain.constant.StatusInfo;
 import com.ict.finalProject.fileSystem.domain.ImageInfo;
 import com.ict.finalProject.fileSystem.repository.ImageInfoRepository;
-import com.ict.finalProject.movie.repository.MoviesRepository;
-import com.ict.finalProject.oauth.repository.UsersRepository;
-import com.ict.finalProject.oauth.repository.domain.Users;
+import java.util.Collections;
+import jakarta.persistence.EntityNotFoundException;
 import com.ict.finalProject.review.repository.MovieReviewRepository;
 import com.ict.finalProject.review.repository.domain.MovieReview;
 import com.ict.finalProject.review.service.MovieReviewService;
@@ -15,80 +15,120 @@ import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import jakarta.persistence.EntityNotFoundException;
-
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+
 
 @Service
 @RequiredArgsConstructor
 public class MovieReviewServiceImpl implements MovieReviewService {
 
     private final MovieReviewRepository reviewRepository;
-    private final ModelMapper modelMapper;
-    private final MoviesRepository moviesRepository;
-    private final UsersRepository usersRepository;
     private final ImageInfoRepository imageInfoRepo;
+    private final ModelMapper modelMapper;
 
 
     @Override
     @Transactional
     public MovieReviewResponse writeReview(MovieReviewRequest request) {
-        // 1) 리뷰 저장
-        MovieReview toSave = MovieReview.builder()
-                .movieNo(request.getMovieNo())
-                .userNo(request.getUserNo())
-                .title(request.getTitle())
-                .content(request.getContent())
-                .build();
-        MovieReview saved = reviewRepository.save(toSave);
+        // --- 1) 리뷰 저장 ---
+        MovieReview saved = reviewRepository.save(
+                MovieReview.builder()
+                        .movieNo(request.getMovieNo())
+                        .userNo(request.getUserNo())
+                        .title(request.getTitle())
+                        .content(request.getContent())
+                        .build()
+        );
 
-        // 2) 업로드된 이미지들 링크 (ImageInfo.boardNo, type 업데이트)
+        // --- 2) 이미지 링크 (PENDING → ACTIVE) ---
         if (request.getImageIds() != null && !request.getImageIds().isEmpty()) {
-            int updatedCount = imageInfoRepo.linkImagesToReview( // 👈 반환값 저장
+            imageInfoRepo.linkImagesToReview(
                     request.getImageIds(),
                     saved.getNo(),
                     ImageWriteType.MOVIEREVIEW
             );
-            System.out.println(">> 이미지 링크된 row 수: " + updatedCount); // 👈 로그 출력
         }
 
-        // 3) DTO 변환 및 이미지 ID 포함
+        // --- 3) DTO 변환 & 이미지 ID 채우기 ---
         MovieReviewResponse dto = modelMapper.map(saved, MovieReviewResponse.class);
-        List<ImageInfo> infos = imageInfoRepo.findAllByBoardNoAndType(saved.getNo(), ImageWriteType.MOVIEREVIEW);
-        dto.setImageIds(infos.stream().map(ImageInfo::getImageId).collect(Collectors.toList()));
-        System.out.println(">> 저장된 리뷰 ID: " + saved.getNo());
-        System.out.println(">> 이미지 연결된 개수: " + dto.getImageIds().size());
+        List<String> ids = imageInfoRepo
+                .findAllByBoardNoAndType(saved.getNo(), ImageWriteType.MOVIEREVIEW)
+                .stream().map(ImageInfo::getImageId).toList();
+        dto.setImageIds(ids);
         return dto;
-
-
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<MovieReviewResponse> getReviews(Integer movieNo) {
-        List<MovieReview> reviews = reviewRepository.findByMovieNo(movieNo);
-        if (reviews.isEmpty()) return Collections.emptyList();
-
-        return reviews.stream().map(r -> {
-            MovieReviewResponse dto = modelMapper.map(r, MovieReviewResponse.class);
-            List<ImageInfo> infos = imageInfoRepo.findAllByBoardNoAndType(r.getNo(), ImageWriteType.MOVIEREVIEW);
-            dto.setImageIds(infos.stream().map(ImageInfo::getImageId).collect(Collectors.toList()));
-            return dto;
-        }).collect(Collectors.toList());
+        return reviewRepository.findByMovieNo(movieNo).stream()
+                .map(r -> {
+                    MovieReviewResponse dto = modelMapper.map(r, MovieReviewResponse.class);
+                    // Status=ACTIVE 인 것만 조회
+                    List<String> activeIds = imageInfoRepo.findImageIdsByBoardNoAndTypeAndStatus(
+                            r.getNo(),
+                            ImageWriteType.MOVIEREVIEW,
+                            StatusInfo.ACTIVE
+                    );
+                    dto.setImageIds(activeIds);
+                    return dto;
+                }).toList();
     }
 
 
     @Override
     @Transactional
     public MovieReviewResponse updateReview(MovieReviewRequest request) {
+        // 1) 리뷰 조회, 없으면 예외
         MovieReview existing = reviewRepository.findById(request.getNo())
-                .orElseThrow(() -> new EntityNotFoundException("Review not found: " + request.getNo()));
+                .orElseThrow(() ->
+                        new EntityNotFoundException("Review not found: " + request.getNo())
+                );
+        existing.setTitle(request.getTitle());
         existing.setContent(request.getContent());
-        MovieReview updated = reviewRepository.save(existing);
-        return modelMapper.map(updated, MovieReviewResponse.class);
+        MovieReview saved = reviewRepository.save(existing);
+
+        // 2) 기존 ACTIVE 이미지 ID 리스트
+        List<String> oldIds = imageInfoRepo.findImageIdsByBoardNoAndTypeAndStatus(
+                saved.getNo(),
+                ImageWriteType.MOVIEREVIEW,
+                StatusInfo.ACTIVE
+        );
+
+        // 3) 요청에 담긴 새 이미지 ID 리스트
+        List<String> newIds = request.getImageIds() != null
+                ? request.getImageIds()
+                : Collections.emptyList();
+
+        // 4) 삭제된(빠진) ID는 DELETE 처리
+        for (String oldId : oldIds) {
+            if (!newIds.contains(oldId)) {
+                imageInfoRepo.updateImageStatus(
+                        oldId,
+                        ImageWriteType.MOVIEREVIEW,
+                        StatusInfo.DELETE
+                );
+            }
+        }
+
+        // 5) 남은/새 ID는 ACTIVE 링크
+        if (!newIds.isEmpty()) {
+            imageInfoRepo.linkImagesToReview(
+                    newIds,
+                    saved.getNo(),
+                    ImageWriteType.MOVIEREVIEW
+            );
+        }
+
+        // 6) DTO 변환 & ACTIVE 이미지만 조회
+        MovieReviewResponse dto = modelMapper.map(saved, MovieReviewResponse.class);
+        List<String> finalIds = imageInfoRepo.findImageIdsByBoardNoAndTypeAndStatus(
+                saved.getNo(),
+                ImageWriteType.MOVIEREVIEW,
+                StatusInfo.ACTIVE
+        );
+        dto.setImageIds(finalIds);
+        return dto;
     }
 
     @Override
